--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+}
+
+h1 {
+    text-align: center;
+}
+
 .container {
         display: flex;
         justify-content: space-between;
@@ -9,6 +17,12 @@
     background-color: gray;
     text-align: center;
 }
+
+.dd {
+    width:  20%;
+    height: 20%;
+}
+
 
 .dd-combat,
 .stress-fail,
