--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -40,9 +40,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .carousel-item img {
   max-width: 50%;
   height: auto;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
 }
