--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -84,6 +84,9 @@ a {
 
 }
 
+.navbar {
+  background-color: #e67e22;
+}
 .navbar-light .navbar-nav .nav-link {
     color: #000;
   }
@@ -167,7 +170,6 @@ a {
   width: 100%;
   object-fit: cover; 
 }
-
 .carousel {
   margin-top : 50px;
 }
@@ -189,4 +191,53 @@ a {
 }
 #carte-AboutUs .card-body {
   text-align: center; 
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.product {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  width: 250px;
+  margin: 15px;
+  padding: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.product img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+.product h3 {
+  color: #34495e;
+  font-size: 18px;
+  margin: 10px 0;
+}
+.product p {
+  color: #7f8c8d;
+  font-size: 14px;
+  margin: 10px 0;
+}
+.product .price {
+  font-size: 18px;
+  color: #e67e22;
+  font-weight: bold;
+  margin: 10px 0;
+}
+.product button {
+  background-color: #16a085;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.product button:hover {
+  background-color: #1abc9c;
 }
